--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,8 +2,15 @@ spring.application.name=bbts-api
 
 # Conexão com o banco de dados
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/[nome da conexao com banco de dados]
-spring.datasource.username=[seu usuario]
-spring.datasource.password=[sua senha]
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/bbts
+spring.datasource.username=root
+spring.datasource.password=Vit@rsantoss103255
+spring.datasource.driver-class-name=org.postgresql.Driver
 #spring.jpa.show-sql: true
+
+# Aumentar limite de upload para 10MB (ajuste conforme necessário)
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+#Server
+server.port=${PORT:8080}
