--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,16 +1,36 @@
+# spring.application.name=bbts-api
+
+# # Conexão com o banco de dados
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://localhost:3306/bbts
+# spring.datasource.username=root
+# spring.datasource.password=Vit@rsantoss103255
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# #spring.jpa.show-sql: true
+
+# # Aumentar limite de upload para 10MB (ajuste conforme necessário)
+# spring.servlet.multipart.max-file-size=10MB
+# spring.servlet.multipart.max-request-size=10MB
+
+# #Server
+# server.port=${PORT:8080}
+
 spring.application.name=bbts-api
 
-# Conexão com o banco de dados
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/bbts
-spring.datasource.username=root
-spring.datasource.password=Vit@rsantoss103255
+# --- CONFIGURAÇÃO POSTGRESQL (Render) ---
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.jpa.show-sql: true
 
-# Aumentar limite de upload para 10MB (ajuste conforme necessário)
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+# --- JPA / HIBERNATE ---
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 
-#Server
+# --- JWT ---
+jwt.secret=${JWT_SECRET:aWdY#k&%qP4vF8@uT!sJ9z$G2cR*bN6mH7e^L5pDaWdY#k&%qP4vF8@uT!sJ9z$G2}
+jwt.expiration=28800000
+
 server.port=${PORT:8080}
